# triangle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/androidTest/java/io/github/kenneycode/triangle/example/: ExampleInstrumentedTest.kt
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: CMakeLists.txt  example.cpp
example/android/app/src/main/java/io/github/kenneycode/triangle/example/: MainActivity.kt
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/test/java/io/github/kenneycode/triangle/example/: ExampleUnitTest.kt
src/: Camera.cpp  Camera.h  Common.h  Engine.cpp  Engine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Primitive.cpp  Primitive.h  Program.cpp  Program.h  Scene.cpp  Scene.h
